fix: Disable word wrapping on the multiline editor

--- a/src/aux-server/aux-web/aux-projector/FileTable/FileTable.css
+++ b/src/aux-server/aux-web/aux-projector/FileTable/FileTable.css
@@ -140,6 +140,9 @@ th:last-child {
 .multi-line-tag-value-editor {
     width: 100%;
     max-height: 400px;
+    white-space: nowrap;
+    overflow-wrap: normal;
+    overflow-x: auto;
 }
 
 .multi-line-tag-value-editor.formula {
